# agent-limit

./: Cargo.toml  README.md  README.zh-CN.md  install.sh
.github/workflows/: release.yml
src/: args.rs  claude.rs  kimi.rs  lib.rs  main.rs  provider.rs  render.rs  terminal.rs
tests/: behavior.rs
