[package]
name = "agent-limit"
version = "0.2.3"
edition = "2024"
description = "Live Claude Code and Kimi usage limits in your terminal, from local credentials."
license = "MIT"
repository = "https://github.com/Hanyang-Li/agent-limit"
readme = "README.md"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["clock", "serde"] }
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
iana-time-zone = "0.1"
reqwest = { version = "0.12", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
